[gd_scene load_steps=7 format=2]

[ext_resource path="res://galgame/assets/art/ui/title_bg.png" type="Texture" id=1]
[ext_resource path="res://galgame/assets/art/ui/sqscrmask.png" type="Texture" id=2]
[ext_resource path="res://galgame/assets/font/造字工房悦圆.otf" type="DynamicFontData" id=3]
[ext_resource path="res://galgame/scenes/menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="VBoxContainer" parent="."]
anchor_top = 0.299
anchor_bottom = 0.945
margin_left = 8.0
margin_top = 9.07999
margin_right = 387.0
margin_bottom = -3.60004
custom_constants/separation = 62
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="TextureButton" parent="btn"]
margin_top = 29.0
margin_right = 379.0
margin_bottom = 139.0
rect_min_size = Vector2( 0, 110 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="btn/start"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "开始游戏"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="TextureButton" parent="btn"]
margin_top = 201.0
margin_right = 379.0
margin_bottom = 311.0
rect_min_size = Vector2( 0, 110 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="btn/continue"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "继续游戏"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="TextureButton" parent="btn"]
margin_top = 373.0
margin_right = 379.0
margin_bottom = 483.0
rect_min_size = Vector2( 0, 110 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="btn/about"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "关于"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="btn"]
margin_top = 545.0
margin_right = 379.0
margin_bottom = 655.0
rect_min_size = Vector2( 0, 110 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="btn/exit"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "退出"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btn/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="btn/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="btn/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="btn/exit" to="." method="_on_exit_pressed"]
