extends Control

func _on_start_pressed():
	change_scene.changescene("res://galgame/scenes/main.tscn")
	pass # Replace with function body.

func _on_continue_pressed():
	pass # Replace with function body.


func _on_about_pressed():
	pass # Replace with function body.


func _on_exit_pressed():
	get_tree().quit()
	pass # Replace with function body.
